tests/sksl/errors/golden/BooleanArithmetic.glsl
### Compilation failed:

error: 1: type mismatch: '+' cannot operate on 'bool2', 'bool2'
error: 2: type mismatch: '-' cannot operate on 'bool2', 'bool2'
error: 3: type mismatch: '*' cannot operate on 'bool2', 'bool2'
error: 4: type mismatch: '/' cannot operate on 'bool2', 'bool2'
error: 5: type mismatch: '%' cannot operate on 'bool2', 'bool2'
error: 6: type mismatch: '<<' cannot operate on 'bool2', 'bool2'
error: 7: type mismatch: '>>' cannot operate on 'bool2', 'bool2'
error: 8: '!' cannot operate on 'bool2'
error: 10: '~' cannot operate on 'bool2'
error: 11: type mismatch: '&' cannot operate on 'bool2', 'bool2'
error: 12: type mismatch: '|' cannot operate on 'bool2', 'bool2'
error: 13: type mismatch: '^' cannot operate on 'bool2', 'bool2'
12 errors
